<resources>
    <string name="app_name">Practicum HHit</string>
    <string name="team">Команда</string>
    <string name="developer1">Шин Екатерина</string>
    <string name="developer2">Сергей Немцев </string>
    <string name="developer3">Антон Рейников</string>
    <string name="developer4">Авдиянц Пётр</string>
    <string name="developer5">Андрей Яковлев</string>
    <string name="work">Над приложением \nработали</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="job_name">Android-разработчик</string>
    <string name="job_salary">от 100 000 ₽</string>
    <string name="company_name_text">Еда</string>
    <string name="company_city_text">Магадан</string>
    <string name="company_experience_text">Требуемый опыт</string>
    <string name="vacancy_description_text">Описание вакансии</string>
    <string name="key_skills_text">Ключевые навыки</string>
    <string name="contact_information_text">Контакты</string>
    <string name="contact_person_text">Контактное лицо</string>
    <string name="contact_person_data">Ирина</string>
    <string name="contact_person_email_text">E-mail</string>
    <string name="contact_person_email_data_text">i.lozgkina@yandex.ru</string>
    <string name="contact_person_phone_text">Телефон</string>
    <string name="contact_person_phone_data_text">+7 (904) 329&#811;27&#811;71</string>
    <string name="contact_comment_text"><b><i>Комментарий</i></b></string>
    <string name="contact_comment_data_text">Заполнить анкету по форме можно на нашем сайте</string>
    <string name="vacancy_text">Вакансия</string>
    <string name="todo">TODO</string>
    <string name="similar_vacancies_button_text">Похожие вакансии</string>
    <string name="search">Поиск</string>
    <string name="search_vacancy">Поиск вакансий</string>
    <string name="input_text">Введите запрос</string>
    <string name="not_vacancy">Таких вакансий нет</string>
    <string name="description_vacancy">Android - разработчик, Магадант</string>
    <string name="error_search">Неудалось получить \n список  вакансий</string>
    <string name="not_internet">Нет интернета</string>
    <string name="search_description_of_company_logo">Логотип компании, предоставляющей данную вакансию.</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="place_to_job">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="enter_salary">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="image_status_checkbox">изображение состояния чекбокса</string>
    <string name="industry_selection">Выбор отрасли</string>
    <string name="input_industry">Введите отрасль</string>
    <string name="image_status_checkbox_circle">изображение состояния круглого чекбокса</string>
    <string name="placeholder">placeholder</string>
    <string name="image_not_list">изображение состояния нет списка</string>
    <string name="failed_to_get_list">Не удалось получить\nсписок</string>
    <string name="clear_button">Кнопка очистки всего текста, введенного в поле ввода</string>
    <string name="search_button">Кнопка поиска вакансий</string>
    <string name="vacancy_no_internet">Нет интернета</string>
    <string name="vacancy_server_error">Ошибка сервера</string>
    <string name="vacancy_nothing_found">Не удалось получить\nсписок вакансий</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_from">от</string>
    <string name="salary_to">до</string>
    <string name="currency_rur_rub">₽</string>
    <string name="currency_byr_bin">p.</string>
    <string name="currency_usd">$</string>
    <string name="currency_eur">€</string>
    <string name="currency_kzt">₸</string>
    <string name="currency_uah">₴</string>
    <string name="currency_azn">₼</string>
    <string name="currency_uzs">лв</string>
    <string name="currency_gel">₾</string>
    <string name="currency_kgt">⃀</string>
    <string name="currency_unknown">\?</string>
    <string name="no_internet_connection">Проверьте подключение к интернету</string>
    <string name="placeholder_description">Изображение-заглушка, находящееся на экране до тех пор, пока не будет осуществлен успешный поиск вакансий</string>
    <plurals name="vacancies">
        <item quantity="zero">Найдено %1$s вакансий</item>
        <item quantity="one">Найдена %1$s вакансия</item>
        <item quantity="two">Найдено %1$s вакансии</item>
        <item quantity="few">Найдено %1$s вакансии</item>
        <item quantity="many">Найдено %1$s вакансий</item>
        <item quantity="other">Найдено %1$s вакансий</item>
    </plurals>
    <string name="no_vacancies_found">Таких вакансий нет</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">Список пуст</string>
    <string name="can_not_get_list">Не удалось получить список вакансий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="region_moscow_text">Москва</string>
    <string name="job_placeholder_text">Авиаперевозки</string>
    <string name="region_text">Регион</string>
    <string name="country_selection">Выбор страны</string>
    <string name="other_regions_text">Другие регионы</string>
    <string name="region_choice_text">Выбор региона</string>
    <string name="industry_selection_field_text">Введите отрасль</string>
    <string name="reset_button_text">Сбросить</string>
    <string name="apply_text">Применить</string>
    <string name="dont_show_without_salary">Не показывать без зарплаты</string>
    <string name="industry_text">Отрасль</string>
    <string name="place_of_work_text">Место работы</string>
    <string name="filtration_settings_text">Настройки фильтрации</string>
    <string name="country">Страна</string>
    <string name="choose_button_text">Выбрать</string>
    <string name="wanted_salary">Ожидаемая зарплата</string>
    <string name="choosing_place_to_job">Выбор места работы</string>
    <string name="input_region">Введите регион</string>
    <string name="there_is_no_such_region">Такого региона нет</string>
    <string name="there_is_no_such_industry">Такой отрасли нет</string>
    <string name="site_url">Сайт компании</string>
    <string name="description_employer">Описание компании</string>
    <string name="open_vacancies">Открытых вакансий</string>
    <string name="open_vancy">Открытые вакансии</string>
</resources>
