<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        style="@style/TextStyleToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/search_vacancy">

        <ImageView
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/ic_filter"
            android:contentDescription="@string/todo" />

    </androidx.appcompat.widget.Toolbar>

    <!--- Search area -->
    <FrameLayout
        android:id="@+id/frame_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_16">

        <EditText
            android:id="@+id/input_search_form"
            style="@style/TextStyleMedium16_500"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/search_field"
            android:drawablePadding="4dp"
            android:hint="@string/input_text"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor" />

        <ImageView
            android:id="@+id/search_field_search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="2dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/search_button"
            android:padding="@dimen/margin_16"
            android:src="@drawable/ic_search"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/search_field_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="2dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/clear_button"
            android:padding="@dimen/margin_16"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/black" />

    </FrameLayout>

    <!--- Amount of vacancies found -->
    <androidx.cardview.widget.CardView
        android:id="@+id/search_found_vacancies_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/radius_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_search"
        tools:visibility="visible">

        <TextView
            android:id="@+id/search_found_vacancies"
            style="@style/TextStyleRegular16_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:paddingHorizontal="@dimen/padding_12"
            android:paddingVertical="@dimen/padding_4"
            android:textColor="@color/white"
            tools:text="Найдено 286 вакансий" />

    </androidx.cardview.widget.CardView>

    <!--- Recycler view with progress bar for pagination as one of items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/found_vacancies_list"
        style="@style/TextStyleRegular12_400"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="17dp"
        android:visibility="gone"
        tools:listitem="@layout/vacancy_pagination_loading" />

    <!--- Placeholders + ProgressBar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/default_placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/placeholder_description"
            android:src="@drawable/ic_placeholder" />

        <TextView
            android:id="@+id/search_nothing_found"
            style="@style/TextStyleMedium22_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/vacancy_nothing_found"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_not_found" />

        <TextView
            android:id="@+id/search_no_internet"
            style="@style/TextStyleMedium22_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/vacancy_no_internet"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_not_internet" />

        <TextView
            android:id="@+id/search_server_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            style="@style/TextStyleMedium22_500"
            android:text="@string/vacancy_server_error"
            app:drawableTopCompat="@drawable/placeholder_sad"/>

        <!--- Loading progressbar -->
        <ProgressBar
            android:id="@+id/search_progress_bar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>
