<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    tools:context=".ui.filter.FilterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/filter_toolbars"
        style="@style/TextStyleToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/vacancy_text">

        <ImageView
            android:id="@+id/button_add_to_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_8"
            android:contentDescription="@string/todo"
            android:paddingEnd="@dimen/font_size_16"
            android:src="@drawable/ic_favorite"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_16"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_share"
            tools:ignore="RtlSymmetry" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/work_place_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="?attr/colorOnSecondary"
        android:drawableEnd="@drawable/ic_item_arrow"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:text="@string/place_of_work_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_16"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/filter_toolbars" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/industry_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="?attr/colorOnSecondary"
        android:drawableEnd="@drawable/ic_item_arrow"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:text="@string/industry_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_16"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/work_place_button" />

    <FrameLayout
        android:id="@+id/frame_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_16"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry_button">

        <EditText
            android:id="@+id/input_search_salary"
            style="@style/TextStyleMedium16_500"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:autofillHints="todo"
            android:background="@drawable/search_field"
            android:cursorVisible="true"
            android:drawablePadding="4dp"
            android:foregroundGravity="center_horizontal"
            android:hint="@string/input_text"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textCursorDrawable="@drawable/cursor" />

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/margin_16"
            android:contentDescription="@string/todo"
            android:padding="@dimen/margin_16"
            android:src="@drawable/ic_search"
            android:visibility="visible"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/margin_16"
            android:contentDescription="@string/todo"
            android:padding="@dimen/margin_16"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/black" />
    </FrameLayout>



    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/checkBox"
        android:button="@null"
        android:drawableRight="@drawable/check_box_selector"
        android:text="@string/dont_show_without_salary"
        android:gravity="start|center_vertical"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingStart="@dimen/margin_8"
        android:paddingEnd="@dimen/margin_8"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_search"
        android:layout_marginStart="16dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/apply_text"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        android:backgroundTint="@color/blue"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/reset_button_text"
        android:backgroundTint="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/red"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
