<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    tools:context="ru.practicum.android.diploma.ui.filter.industry.IndustrySelectionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/industrySelectionToolbar"
        style="@style/TextStyleToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/industry_selection" />

    <FrameLayout
        android:id="@+id/flSearchIndustry"
        android:layout_width="match_parent"
        android:layout_height="72dp" >

        <EditText
            android:id="@+id/etIndustrySelection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:inputType="text"
            android:hint="@string/input_industry"
            android:textColorHint="?attr/searchSalaryFieldText"
            android:lines="1"
            android:maxLength="25"
            android:background="@drawable/search_field"
            android:paddingStart="@dimen/margin_16"
            android:importantForAutofill="no"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/btSearchAndClearInputIndustry"
            style="@style/ButtonInsideEditText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_12"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="?attr/searchField"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:src="@drawable/ic_search_edittext"
            android:contentDescription="TODO" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flRecycleViewIndustries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIndustries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/industry_item"
            tools:itemCount="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivNotListIndustries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="122dp"
                android:src="@drawable/ic_not_list"
                android:visibility="visible"
                android:contentDescription="@string/image_not_list" />

            <TextView
                android:id="@+id/tvNotListIndustries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_22"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                android:text="@string/failed_to_get_list" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>

