<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/placeToWorkToolbar"
        style="@style/TextStyleToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/choosing_place_to_job">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiCountry"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="@style/TextStyleRegular16_400"
        android:hint="@string/country"
        android:textColorHint="@color/gray"
        app:hintTextColor="?attr/colorOnPrimary"
        app:hintTextAppearance="@style/TextStyleRegular12_400"
        app:endIconDrawable="@drawable/ic_item_arrow"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnPrimary"
        app:boxStrokeWidth="@dimen/box_stroke_width_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeToWorkToolbar"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:textAppearance="@style/TextStyleRegular16_400"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="textMultiLine|textNoSuggestions"
            tools:ignore="RtlSymmetry">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiRegion"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="@style/TextStyleRegular16_400"
        android:hint="@string/region_text"
        android:textColorHint="@color/gray"
        app:hintTextColor="?attr/colorOnPrimary"
        app:hintTextAppearance="@style/TextStyleRegular12_400"
        app:endIconDrawable="@drawable/ic_item_arrow"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnPrimary"
        app:boxStrokeWidth="@dimen/box_stroke_width_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiCountry"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:textAppearance="@style/TextStyleRegular16_400"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="textMultiLine|textNoSuggestions"
            tools:ignore="RtlSymmetry">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selected_button"
        style="@style/TextStyleMedium16_500"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_size_60"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_24"
        android:backgroundTint="@color/blue"
        android:text="@string/choose_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>
